# NIAL_WASM

./: .gitignore  INDEX.md  README.md  _config.yml  about.md  index.html  index.md  index.md~
BuildCore/: .#index.html  emcc_build.sh  index.html
BuildCore/src/: CMakeLists.txt  fileio.c  main_stu.c  qniallim.h
BuildNial/: emcc_build.sh  test1.ndf
BuildNial/home/web_user/QNial7/Nialroot/niallib/: foldl.ndf  radix.ndf  sprintf.ndf  teach.ndf  teach.ndf~  unicode.ndf
BuildNial/pkgblder/: Cmakeheader  Cmakemiddle  nialcoredefs.ndf
BuildNial/pkgblder/all_features/NFILES/: nfiles.nh
BuildNial/pkgblder/all_features/NFILES/NFILES_src/: nfiles.c  nfiles.c~
BuildNial/pkgblder/all_features/NSCREEN/: nscreen.nh
BuildNial/pkgblder/all_features/NSCREEN/NSCREEN_src/: nscreen.c
BuildNial/pkgblder/src_nialcore/: fileio.c  fileio.c~
BuildNial/src/: CMakeLists.txt  basics.c  basics.h  defs.ndf  defstbl.h  fileio.c  nfiles.c  pkgswchs.h  scan.c
Current/: .#nial.css  index.html  nial.css  nial.data  nial.js  nial.wasm  nialcore.js  nialcore.wasm
Current/mode/nial/: nial.js  nial.js~
Webworker/: example.js  index.html  main.js  worker.js  worker.js~
_posts/: 2023-08-03-Welcome-to-nial.md
current/: index.html  nial.css  nial.js  nial.wasm  nialcore.js  nialcore.wasm
current/examples/: initial.ndf  initial.ndf~
current/mode/nial/: new_nial.js
lib/: codemirror.css~
mode/nial/: new_nial.js~  nial.js~
mode/wast/: .#wast.js
